--- a/contact.html
+++ b/contact.html
@@ -343,7 +343,7 @@
                      </div>
                      <div class='gf_browser_chrome enform_wrapper enform_legacy_markup_wrapper' id='enform_wrapper_2'>
                         <div id='gf_2' class='enform_anchor' tabindex='-1'></div>
-                        <form method="post" action="/mail.php">
+                        <form class="contact__form" method="post" action="mail.php">
                            <div class='enform_body enform-body'>
                               <ul id='enform_fields_2'
                                  class='enform_fields top_label form_sublabel_below description_below'>
@@ -389,6 +389,40 @@
                                     src="/assets/resources/img/arrow-icon-c-01.svg" /></span>
                            </div>
                            <div class="success">We received your submission, thank you!</div>
+                        </form>
+                        <form class="contact__form container" method="post" action="mail.php">
+                           <!-- Starting of successful form message -->
+                           <div class="row">
+                              <div class="col-12">
+                                 <div class="alert alert-success contact__msg" style="display: none" role="alert">
+                                    Your message was sent successfully.
+                                 </div>
+                              </div>
+                           </div>
+                           <!-- Ending of successful form message -->
+
+                           <!-- Element of the ajax contact form -->
+                           <div class="row">
+                              <div class="col-md-6 form-group">
+                                 <input name="name" type="text" class="form-control" placeholder="Name" required>
+                              </div>
+                              <div class="col-md-6 form-group">
+                                 <input name="email" type="email" class="form-control" placeholder="Email" required>
+                              </div>
+                              <div class="col-md-6 form-group">
+                                 <input name="phone" type="text" class="form-control" placeholder="Phone" required>
+                              </div>
+                              <div class="col-md-6 form-group">
+                                 <input name="subject" type="text" class="form-control" placeholder="Subject" required>
+                              </div>
+                              <div class="col-12 form-group">
+                                 <textarea name="message" class="form-control" rows="3" placeholder="Message"
+                                    required></textarea>
+                              </div>
+                              <div class="col-12">
+                                 <input name="submit" type="submit" class="btn btn-success" value="Send Message">
+                              </div>
+                           </div>
                         </form>
                      </div>
 
