--- a/contact.html
+++ b/contact.html
@@ -343,7 +343,9 @@
                      </div>
                      <div class='gf_browser_chrome enform_wrapper enform_legacy_markup_wrapper' id='enform_wrapper_2'>
                         <div id='gf_2' class='enform_anchor' tabindex='-1'></div>
-                        <form class="contact__form" method="post" action="mail.php">
+                        <form accept-charset="UTF-8" id='ajaxForm'
+                           action="https://getform.io/f/381a4d26-aedc-47ca-8a7e-53ba94592541" method="POST"
+                           target="_blank">
                            <div class='enform_body enform-body'>
                               <ul id='enform_fields_2'
                                  class='enform_fields top_label form_sublabel_below description_below'>
@@ -383,46 +385,11 @@
                                  </li>
                               </ul>
                            </div>
-                           <div class='enform_footer top_label'> <input class='button enform_button' data-magnetic=""
-                                 data-cursor="-opaque" id='enform_submit_button_2' type="submit"
-                                 value="Send Message">Submit <span><img
-                                    src="/assets/resources/img/arrow-icon-c-01.svg" /></span>
+                           <div class='enform_footer top_label'> <button class='button enform_button' data-magnetic=""
+                                 data-cursor="-opaque" id='enform_submit_button_2' type="submit">Submit <span><img
+                                       src="/assets/resources/img/arrow-icon-c-01.svg" /></span></button>
                            </div>
                            <div class="success">We received your submission, thank you!</div>
-                        </form>
-                        <form class="contact__form container" method="post" action="mail.php">
-                           <!-- Starting of successful form message -->
-                           <div class="row">
-                              <div class="col-12">
-                                 <div class="alert alert-success contact__msg" style="display: none" role="alert">
-                                    Your message was sent successfully.
-                                 </div>
-                              </div>
-                           </div>
-                           <!-- Ending of successful form message -->
-
-                           <!-- Element of the ajax contact form -->
-                           <div class="row">
-                              <div class="col-md-6 form-group">
-                                 <input name="name" type="text" class="form-control" placeholder="Name" required>
-                              </div>
-                              <div class="col-md-6 form-group">
-                                 <input name="email" type="email" class="form-control" placeholder="Email" required>
-                              </div>
-                              <div class="col-md-6 form-group">
-                                 <input name="phone" type="text" class="form-control" placeholder="Phone" required>
-                              </div>
-                              <div class="col-md-6 form-group">
-                                 <input name="subject" type="text" class="form-control" placeholder="Subject" required>
-                              </div>
-                              <div class="col-12 form-group">
-                                 <textarea name="message" class="form-control" rows="3" placeholder="Message"
-                                    required></textarea>
-                              </div>
-                              <div class="col-12">
-                                 <input name="submit" type="submit" class="btn btn-success" value="Send Message">
-                              </div>
-                           </div>
                         </form>
                      </div>
 
