--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -26,7 +26,7 @@
     <div class="loading-screen"></div>
 </div>
 
-<body data-barba="wrapper">
+<body data-barba="wrapper" style="background: #fff;" data-humcolor="#000">
     <div class="init-load">
         <div id="noise2"></div>
         <div class="inner">
@@ -370,7 +370,7 @@
                 </section>
 
                 <!-- Scroll Section -->
-                <div class="scroll-sec2" data-scroll data-humcolor="#fff">
+                <div class="scroll-sec2" data-scroll data-humcolor="#000">
                     <div class="back-text ">
                         <h1 class="opacity-0" data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal">
                             <span>Digital
@@ -559,7 +559,7 @@
                                         <li>
                                             <a href="https://www.instagram.com/enigmadigital/" target="_blank"
                                                 class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
