--- a/interface-design.html
+++ b/interface-design.html
@@ -657,7 +657,7 @@
                                         <li>
                                             <a href="https://www.instagram.com/enigmadigital/" target="_blank"
                                                 class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
