--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
                         <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.behance.net/enigma-digital" target="_blank" rel="noopener"
                                 class="Menu-socialsItemLink">
-                                <span class="Menu-socialsItemLabel">behance</span>
+                                <span class="Menu-socialsItemLabel">Behance</span>
                             </a>
                         </div>
                     </div>
@@ -2235,8 +2235,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank"
-                                                class="twit" data-cursor="-opaque"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank" class="twit"
+                                                data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="twitter.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
