--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
    <div class="loading-screen"></div>
 </div>
 
-<body data-barba="wrapper">
+<body data-barba="wrapper" style="background: #fff;">
    <div class="init-load">
       <div id="noise2"></div>
       <div class="inner">
@@ -205,23 +205,22 @@
                   </a>
                   <div class="Menu-subnav">
                      <div class="sub-nav">
-                        <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                           href="services-details.html"><span class="cb-outro-social-item-title"><span
-                                 data-text="Strategy">Strategy</span></span></a>
+                        <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="strategy.html"><span
+                              class="cb-outro-social-item-title"><span data-text="Strategy">Strategy</span></span></a>
                      </div>
                      <div class="sub-nav">
                         <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                           href="services-details.html"><span class="cb-outro-social-item-title"><span
+                           href="interface-design.html"><span class="cb-outro-social-item-title"><span
                                  data-text="Design">Design</span></span></a>
                      </div>
                      <div class="sub-nav">
                         <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                           href="services-details.html"><span class="cb-outro-social-item-title"><span
+                           href="technology-development.html"><span class="cb-outro-social-item-title"><span
                                  data-text="Development">Development</span></span></a>
                      </div>
                      <div class="sub-nav">
                         <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                           href="services-details.html"><span class="cb-outro-social-item-title"><span
+                           href="digital-marketing.html"><span class="cb-outro-social-item-title"><span
                                  data-text="Marketing">Marketing</span></span></a>
                      </div>
                   </div>
@@ -283,7 +282,7 @@
                   <div class="Menu-socialsItem" data-cursor="-opaque">
                      <a href="https://www.behance.net/enigma-digital" target="_blank" rel="noopener"
                         class="Menu-socialsItemLink">
-                        <span class="Menu-socialsItemLabel">behance</span>
+                        <span class="Menu-socialsItemLabel">Behance</span>
                      </a>
                   </div>
                </div>
