--- a/patronum.html
+++ b/patronum.html
@@ -279,7 +279,7 @@
                         <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.behance.net/enigma-digital" target="_blank" rel="noopener"
                                 class="Menu-socialsItemLink">
-                                <span class="Menu-socialsItemLabel">behance</span>
+                                <span class="Menu-socialsItemLabel">Behance</span>
                             </a>
                         </div>
                     </div>
