--- a/strategy.html
+++ b/strategy.html
@@ -380,18 +380,18 @@
                 </section>
 
                 <!-- Scroll Section -->
-                <div class="scroll-sec2" data-scroll data-humcolor="#fff">
-                    <div class="back-text">
+                <div class="scroll-sec2" data-humcolor="#fff">
+                    <div class="back-text" data-scroll>
                         <h1 class="opacity-0" data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal">
                             <span>Approach &
                                 Process</span>
                         </h1>
                     </div>
-                    <div class="container text_anim">
-                        <h2><span>
+                    <div class="container " data-scroll>
+                        <h2 class="text_anim"><span>
                                 An Industry-Leading Approach To Get You From Where You Are To Where You Want To Be!
                             </span></h2>
-                        <div class="details-f">
+                        <div class="details-f text_anim">
                             <div class="cont">
                                 <p><span>
                                         Managing your entire digital footprint can be perplexing. Getting everything in
@@ -413,15 +413,19 @@
                                 <img src="/assets/resources/img/Service-elements/Strategy-image-1.png" alt="" />
                             </figure>
                         </div>
-                        <h2 class="bo-h text_anim">
-                            <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
-                                data-scroll-speed="8 ">
-                            <span>
-                                So we made our own unique process to provide sound strategies and digital solutions that
-                                help our clients respond to the changing customer, technology and competitor landscape
-                                and achieve measurable outcomes for their business.
-                            </span>
-                        </h2>
+                        <div data-scroll="">
+                            <h2 class="bo-h text_anim">
+                                <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
+                                    data-scroll-speed="8 ">
+                                <span>
+                                    So we made our own unique process to provide sound strategies and digital solutions
+                                    that
+                                    help our clients respond to the changing customer, technology and competitor
+                                    landscape
+                                    and achieve measurable outcomes for their business.
+                                </span>
+                            </h2>
+                        </div>
                     </div>
                     <!-- New Section -->
                     <section class="ser-two" data-scroll="">
@@ -532,9 +536,9 @@
                             </div>
                         </div>
                     </section>
-                    <div class="container text_anim" data-scroll>
+                    <div class="container " data-scroll>
 
-                        <h2 class="bo-h " style="margin-top: -5%;"><span>
+                        <h2 class="bo-h text_anim over" style="margin-top: -5%;"><span>
                                 With extensive research, meticulous planning & a detailed understanding of your
                                 product/services and your business goals, we create the perfect strategy that builds
                                 meaningful online experiences across multiple channels that help your customers quickly
@@ -581,7 +585,7 @@
                             <span>Our unique approach has helped us become one of the world’s most influential digital
                                 strategy consultancies. Our digital strategy & planning services include:</span>
                         </h2>
-                        <ul class="point opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                        <ul class="point opacity-0" data-scroll="" data-scroll-delay="0.20" data-scroll-offset="130">
                             <li><span>
                                     Digital Advisory and Consulting
                                 </span></li>
@@ -617,9 +621,9 @@
                         </ul>
                     </div>
                 </section>
-                <section class="last" data-bgcolor="#fff" data-humcolor="#000" data-textcolor="#000" data-scroll="">
-                    <div class="text_anim">
-                        <p class=" gr-b">
+                <section class="last" data-bgcolor="#fff" data-humcolor="#000" data-textcolor="#000">
+                    <div class="" data-scroll="">
+                        <p class=" gr-b text_anim">
                             <span>They say a winning strategy is hard to come by. We at Enigma Digital are changing that
                                 belief,<b class="grd">one client at a time!</b></span>
 
