--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <div class="loading-screen"></div>
 </div>
 
-<body data-barba="wrapper">
+<body data-barba="wrapper" style="background: #fff;">
     <div class="init-load">
         <div id="noise2"></div>
         <div class="inner">
