--- a/index.html
+++ b/index.html
@@ -646,9 +646,8 @@
                                         </div>
                                     </div>
                                     <div class="c-hm-us_s2">
-                                        <h4 class="t-lead">Think We're The Right <br> Partners To Bring Your Idea<br>To
-                                            Life
-                                            Or Take Your<br>Brand To The Next level?</h4>
+                                        <h4 class="t-lead">Do you think we're the right <br> partners to bring your idea
+                                            to life<br>and take your brand<br>to the Next Level? 🚀</h4>
                                         <div class="c-hm-us_title">
                                             <h2 class="t-d3-fluid cta" data-magnetic data-cursor="-opaque"> <a
                                                     href="contact.html"><span>
