--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -446,6 +446,65 @@
                             </p>
                         </div>
                     </section>
+                    <!-- <section class="ser-two" data-scroll="">
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="01">
+                            <p>Understanding your business needs</p>
+                        </div>
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="02">
+                            <p>Developing an appropriate strategy</p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="03">
+                            <p>Defining a communication plan</p>
+                        </div>
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="04">
+                            <p>Choosing the suitable mediums
+                            </p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="05">
+                            <p>Implementing the plan using the right tools</p>
+                        </div>
+                        <div class="item mar-top item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="06">
+                            <p>Measure its impact
+                            </p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="07">
+                            <p>Iterate and repeat
+                            </p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="08">
+                            <p>Repeat until you get the desired result
+                            </p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="09">
+                            <p>Be accountable for our actions
+                            </p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="10">
+                            <p>Actively listen to your feedback
+                            </p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                        data-scroll-direction="horizontal" data-text="11">
+                        <p>Learn from mistakes
+                        </p>
+                    </div>
+                    <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                    data-scroll-direction="horizontal" data-text="12">
+                    <p>And most importantly, Be Honest!
+                    </p>
+                </div>
+
+                    </section> -->
                 </div>
 
                 <!-- End -->
@@ -465,7 +524,7 @@
                                 with:
                             </span>
                         </p>
-                        <ul class="point opacity-0" data-scroll="">
+                        <ul class="point opacity-0" data-scroll="" data-scroll-delay="0.20" data-scroll-offset="130">
                             <li>Social Media Management</li>
                             <li>Media Planning & Buying</li>
                             <li>Content Creation & Curation</li>
