--- a/works2.html
+++ b/works2.html
@@ -317,57 +317,57 @@
                                             </div>
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-1.html">Deals App</a>
+                                            <a href="project-1.html">Patronum</a>
                                         </div>
                                     </div>
                                     <div class="cas-project">
                                         <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/patronum-work.png">
+                                            <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-8.html">Blast</a>
+                                            <a href="project-8.html">Kedarkala</a>
                                         </div>
                                     </div>
                                     <div class="cas-project">
                                         <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/patronum-work.png">
+                                            <img alt="Project Image" src="/assets/resources/img/DMTCA-work.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-2.html">Meskalina Studio</a>
+                                            <a href="project-2.html">Dmtca</a>
                                         </div>
                                     </div>
                                     <div class="cas-project">
                                         <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/patronum-work.png">
+                                            <img alt="Project Image" src="/assets/resources/img/dharan-work.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-4.html">Codicis</a>
+                                            <a href="project-4.html">Dharan</a>
                                         </div>
                                     </div>
                                     <div class="cas-project">
                                         <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/patronum-work.png">
+                                            <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-6.html">Men's Cave</a>
+                                            <a href="project-6.html">Pdtl</a>
                                         </div>
                                     </div>
                                     <div class="cas-project">
                                         <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/patronum-work.png">
+                                            <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-7.html">Maxibillion London</a>
+                                            <a href="project-7.html">QuickX</a>
                                         </div>
                                     </div>
-                                    <div class="cas-project">
+                                    <!-- <div class="cas-project">
                                         <div class="cs-image">
                                             <img alt="Project Image" src="/assets/resources/img/patronum-work.png">
                                         </div>
                                         <div class="cs-title">
                                             <a href="project-9.html">Moneta App</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="cas-titles"></div>
                                 <div class="cas-progress"><span></span></div>
