--- a/works2.html
+++ b/works2.html
@@ -357,7 +357,7 @@
                                             <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-7.html">QuickX</a>
+                                            <a href="project-7.html">QuickX App</a>
                                         </div>
                                     </div>
                                     <!-- <div class="cas-project">
