--- a/works2.html
+++ b/works2.html
@@ -304,10 +304,10 @@
                             <div class="portfolio-showcase carousel-showcase">
                                 <div class="cas-bg-text">Featured Works</div>
                                 <div class="cas-headline">
-                                    Hello! We are PeThemes,
-                                    <br>a digital creative agency from NY.
-                                    <br>Creating wonderful digital products
-                                    <br>and a pinch of rock'n roll!
+                                    The perfect balance of passion, inspiration,
+                                    <br> commitment & meticulous artisanship
+                                    <br>to build digital products that deliver results
+                                    <br>and help businesses grow globally.
                                 </div>
                                 <div class="cas-project-wrapper">
                                     <div class="cas-project">
